force-app/main/default/objects/Referral_Notes__c/Referral_Notes__c.object-meta.xml
<CustomObject>
    <description>Provides mechanism to capture notes with security enabled as desired.</description>
    <label>Referral Note</label>
    <nameField>
        <displayFormat>Note-{000000}</displayFormat>
        <label>Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Notes &amp; Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>