force-app/main/default/objects/Referral_Notes__c/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No rules are currently driven by this field. Consider setting notes to private and adding a sharing rule to allow viewing of confidential records.</description>
    <inlineHelpText>Check this box to indicate that the contents of this note are protected as confidential.</inlineHelpText>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>