force-app/main/default/objects/Referral_Notes__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <description>Allows the quick identification of the note type</description>
    <inlineHelpText>Select a type of note for easy classification</inlineHelpText>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Status Update</fullName>
            </value>
            <value>
                <fullName>Case Conclusion</fullName>
            </value>
            <value>
                <fullName>Rejection Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>